--- a/MVCapp/Views/PayPal/CreditCardView.cshtml
+++ b/MVCapp/Views/PayPal/CreditCardView.cshtml
@@ -3,7 +3,7 @@
     ViewBag.Title = "CreditCardView";
 }
 
-<h2>CreditCardView</h2>
+<div class="h2">CreditCardView</div>
 
 <p> Fejlesztés alatt</p>
 <div>
