--- a/MVCapp/Views/PayPal/FailureView.cshtml
+++ b/MVCapp/Views/PayPal/FailureView.cshtml
@@ -3,7 +3,7 @@
     ViewBag.Title = "FailureView";
 }
 
-<h2>FailureView</h2>
+<div class="h2">FailureView</div>
 
 <p> Sikertelen tranzakció </p>
 <div>
