--- a/MVCapp/Views/Products/Edit.cshtml
+++ b/MVCapp/Views/Products/Edit.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Edit";
 }
 
-<h2>Edit</h2>
+<div class="h2">Edit</div>
 
 
 @using (Html.BeginForm())
@@ -51,7 +51,7 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Save" class="btn btn-default" />
+                <input type="submit" class="btn" value="Save" class="btn btn-default" />
             </div>
         </div>
     </div>
