--- a/MVCapp/Views/Account/Login.cshtml
+++ b/MVCapp/Views/Account/Login.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Log in";
 }
 
-<h2>@ViewBag.Title.</h2>
+<div class="h2">@ViewBag.Title.</div>
 <div class="row">
     <div class="col-md-8">
         <section id="loginForm">
@@ -38,7 +38,7 @@
                 </div>
                 <div class="form-group">
                     <div class="col-md-offset-2 col-md-10">
-                        <input type="submit" value="Log in" class="btn btn-default" />
+                        <input type="submit" class="btn" value="Log in" class="btn btn-default" />
                     </div>
                 </div>
                 <p>
