--- a/MVCapp/Views/Account/VerifyCode.cshtml
+++ b/MVCapp/Views/Account/VerifyCode.cshtml
@@ -3,7 +3,7 @@
     ViewBag.Title = "Verify";
 }
 
-<h2>@ViewBag.Title.</h2>
+<div class="h2">@ViewBag.Title.</div>
 
 @using (Html.BeginForm("VerifyCode", "Account", new { ReturnUrl = Model.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" })) {
     @Html.AntiForgeryToken()
@@ -28,7 +28,7 @@
     </div>
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
-            <input type="submit" class="btn btn-default" value="Submit" />
+            <input type="submit" class="btn" class="btn btn-default" value="Submit" />
         </div>
     </div>
 }
