--- a/MVCapp/Views/Manage/SetPassword.cshtml
+++ b/MVCapp/Views/Manage/SetPassword.cshtml
@@ -3,7 +3,7 @@
     ViewBag.Title = "Create Password";
 }
 
-<h2>@ViewBag.Title.</h2>
+<div class="h2">@ViewBag.Title.</div>
 <p class="text-info">
     You do not have a local username/password for this site. Add a local
     account so you can log in without an external login.
@@ -30,7 +30,7 @@
     </div>
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
-            <input type="submit" value="Set password" class="btn btn-default" />
+            <input type="submit" class="btn" value="Set password" class="btn btn-default" />
         </div>
     </div>
 }
