--- a/MVCapp/Views/Manage/VerifyPhoneNumber.cshtml
+++ b/MVCapp/Views/Manage/VerifyPhoneNumber.cshtml
@@ -3,7 +3,7 @@
     ViewBag.Title = "Verify Phone Number";
 }
 
-<h2>@ViewBag.Title.</h2>
+<div class="h2">@ViewBag.Title.</div>
 
 @using (Html.BeginForm("VerifyPhoneNumber", "Manage", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
 {
@@ -21,7 +21,7 @@
     </div>
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
-            <input type="submit" class="btn btn-default" value="Submit" />
+            <input type="submit" class="btn" class="btn btn-default" value="Submit" />
         </div>
     </div>
 }
