--- a/MVCapp/Views/PayPal/SuccessView.cshtml
+++ b/MVCapp/Views/PayPal/SuccessView.cshtml
@@ -3,7 +3,7 @@
     ViewBag.Title = "SuccessView";
 }
 
-<h2>SuccessView</h2>
+<div class="h2">SuccessView</div>
 
 <p> Sikeres tranzakció</p>
 <div>
