--- a/MVCapp/Views/Products/Delete.cshtml
+++ b/MVCapp/Views/Products/Delete.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Delete";
 }
 
-<h2>Delete</h2>
+<div class="h2">Delete</div>
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
@@ -49,7 +49,7 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
+            <input type="submit" class="btn" value="Delete" class="btn btn-default" /> |
             @Html.ActionLink("Back to List", "Index")
         </div>
     }
